outputs_20260331-043038-52495341/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:1:
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G5_001_update_first_step_increments_duties':
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:174:105: error: 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties' undeclared (first use in this function); did you mean 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount'?
  174 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, (UT_INIT_DUTY_U_PERCENT + UT_DUTY_STEP_PERCENT), mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "Phase U must increment by step on first update");
      |                                                                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:174:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  174 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, (UT_INIT_DUTY_U_PERCENT + UT_DUTY_STEP_PERCENT), mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "Phase U must increment by step on first update");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:174:105: note: each undeclared identifier is reported only once for each function it appears in
  174 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, (UT_INIT_DUTY_U_PERCENT + UT_DUTY_STEP_PERCENT), mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "Phase U must increment by step on first update");
      |                                                                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:174:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  174 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, (UT_INIT_DUTY_U_PERCENT + UT_DUTY_STEP_PERCENT), mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "Phase U must increment by step on first update");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G6_001_second_update_wraps_W_to_min':
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:211:63: error: 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties' undeclared (first use in this function); did you mean 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount'?
  211 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, 45.0f, mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "After 2nd update, Phase U must be 45%");
      |                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:211:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  211 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, 45.0f, mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "After 2nd update, Phase U must be 45%");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G6_002_fourth_update_wraps_V_to_min_independently':
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:235:63: error: 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties' undeclared (first use in this function); did you mean 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount'?
  235 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, 65.0f, mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "After 4th update, Phase U must be 65%");
      |                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_8rdq_tx7\test\test_gtm_tom_3_phase_inverter_pwm.c:235:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  235 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, 65.0f, mock_IfxGtm_Pwm_updateChannelsDutyImmediate_lastDuties[0], "After 4th update, Phase U must be 65%");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
